use stack's texturepack File instances